public interface IEvento {
    
    public void inscrever();
}
